// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`five ants at stage 3 5 more newly added 1`] = `
Object {
  "ants": Array [
    Object {
      "hp": 24,
      "id": 4,
      "x": 1,
      "y": 2,
    },
    Object {
      "hp": 50,
      "id": 5,
      "x": 1,
      "y": 2,
    },
    Object {
      "hp": 50,
      "id": 6,
      "x": 0,
      "y": 0,
    },
    Object {
      "hp": 50,
      "id": 7,
      "x": 0,
      "y": 0,
    },
    Object {
      "hp": 50,
      "id": 8,
      "x": 0,
      "y": 0,
    },
    Object {
      "hp": 50,
      "id": 9,
      "x": 0,
      "y": 0,
    },
    Object {
      "hp": 50,
      "id": 10,
      "x": 0,
      "y": 0,
    },
  ],
  "tiles": Array [
    Object {
      "x": 0,
      "y": 0,
    },
    Object {
      "x": 1,
      "y": 0,
    },
    Object {
      "x": 1,
      "y": 1,
    },
    Object {
      "x": 1,
      "y": 2,
    },
    Object {
      "x": 1,
      "y": 4,
    },
    Object {
      "x": 2,
      "y": 1,
    },
    Object {
      "x": 2,
      "y": 2,
    },
    Object {
      "x": 2,
      "y": 4,
    },
    Object {
      "x": 3,
      "y": 2,
    },
    Object {
      "x": 3,
      "y": 3,
    },
    Object {
      "x": 3,
      "y": 4,
    },
    Object {
      "x": 4,
      "y": 2,
    },
    Object {
      "x": 4,
      "y": 3,
    },
    Object {
      "x": 4,
      "y": 4,
    },
    Object {
      "x": 4,
      "y": 5,
    },
  ],
}
`;

exports[`five ants at stage 7 5 more at 4 1`] = `
Object {
  "ants": Array [],
  "tiles": Array [
    Object {
      "x": 0,
      "y": 0,
    },
    Object {
      "x": 1,
      "y": 0,
    },
    Object {
      "x": 1,
      "y": 1,
    },
    Object {
      "x": 1,
      "y": 2,
    },
    Object {
      "x": 1,
      "y": 4,
    },
    Object {
      "x": 2,
      "y": 1,
    },
    Object {
      "x": 2,
      "y": 2,
    },
    Object {
      "x": 2,
      "y": 4,
    },
    Object {
      "x": 3,
      "y": 2,
    },
    Object {
      "x": 3,
      "y": 3,
    },
    Object {
      "x": 3,
      "y": 4,
    },
    Object {
      "x": 4,
      "y": 2,
    },
    Object {
      "x": 4,
      "y": 3,
    },
    Object {
      "x": 4,
      "y": 4,
    },
    Object {
      "x": 4,
      "y": 5,
    },
  ],
}
`;

exports[`five unmoved ants 1`] = `
Object {
  "ants": Array [
    Object {
      "hp": 50,
      "id": 1,
      "x": 0,
      "y": 0,
    },
    Object {
      "hp": 50,
      "id": 2,
      "x": 0,
      "y": 0,
    },
    Object {
      "hp": 50,
      "id": 3,
      "x": 0,
      "y": 0,
    },
    Object {
      "hp": 50,
      "id": 4,
      "x": 0,
      "y": 0,
    },
    Object {
      "hp": 50,
      "id": 5,
      "x": 0,
      "y": 0,
    },
  ],
  "tiles": Array [
    Object {
      "x": 0,
      "y": 0,
    },
    Object {
      "x": 1,
      "y": 0,
    },
    Object {
      "x": 1,
      "y": 1,
    },
    Object {
      "x": 1,
      "y": 2,
    },
    Object {
      "x": 1,
      "y": 4,
    },
    Object {
      "x": 2,
      "y": 1,
    },
    Object {
      "x": 2,
      "y": 2,
    },
    Object {
      "x": 2,
      "y": 4,
    },
    Object {
      "x": 3,
      "y": 2,
    },
    Object {
      "x": 3,
      "y": 3,
    },
    Object {
      "x": 3,
      "y": 4,
    },
    Object {
      "x": 4,
      "y": 2,
    },
    Object {
      "x": 4,
      "y": 3,
    },
    Object {
      "x": 4,
      "y": 4,
    },
    Object {
      "x": 4,
      "y": 5,
    },
  ],
}
`;

exports[`no ants yet 1`] = `
Object {
  "ants": Array [],
  "tiles": Array [
    Object {
      "x": 0,
      "y": 0,
    },
    Object {
      "x": 1,
      "y": 0,
    },
    Object {
      "x": 1,
      "y": 1,
    },
    Object {
      "x": 1,
      "y": 2,
    },
    Object {
      "x": 1,
      "y": 4,
    },
    Object {
      "x": 2,
      "y": 1,
    },
    Object {
      "x": 2,
      "y": 2,
    },
    Object {
      "x": 2,
      "y": 4,
    },
    Object {
      "x": 3,
      "y": 2,
    },
    Object {
      "x": 3,
      "y": 3,
    },
    Object {
      "x": 3,
      "y": 4,
    },
    Object {
      "x": 4,
      "y": 2,
    },
    Object {
      "x": 4,
      "y": 3,
    },
    Object {
      "x": 4,
      "y": 4,
    },
    Object {
      "x": 4,
      "y": 5,
    },
  ],
}
`;
